turmites.lessons.turmites.helloturmite.HelloTurmite.scala.error
Turmite:16: error: constructor cannot be instantiated to expected type;
 found   : (T1, T2, T3)
 required: Array[Int]
    case (d,0,s) => c = d;state = s
         ^Turmite:17: error: constructor cannot be instantiated to expected type;
 found   : (T1, T2, T3)
 required: Array[Int]
    case (d,1,s) => c = d;state = s;avance()
         ^Turmite:18: error: constructor cannot be instantiated to expected type;
 found   : (T1, T2, T3)
 required: Array[Int]
    case (d,2,s) => c = d;state = s;gauche();avance()
         ^Turmite:19: error: constructor cannot be instantiated to expected type;
 found   : (T1, T2, T3)
 required: Array[Int]
    case (d,4,s) => c = d;state = s;droite();droite();avance()
         ^Turmite:20: error: constructor cannot be instantiated to expected type;
 found   : (T1, T2, T3)
 required: Array[Int]
    case (d,8,s) => c = d;state = s;droite();avance()
         ^